--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <h1>New game</h1>
-  <% @letters.each do |letter| %>
-  <%= letter %>
-  <% end %>
-</div>
-
+  <div class="d-flex">
+    <% @letters.each do |letter| %>
+    <div class="p-3 border m-2 bg-primary text-white fs-4 font-weight-bold"><%= letter %></div>
+    <% end %>
+  </div>
 <form action="/score" method="post" data-turbo="false">
   <label for="word">What is the longest word you can find?</label>
   <div class="input-group mb-3">
@@ -14,3 +14,4 @@
   <%= hidden_field_tag :grid, @letters %>
   <%= hidden_field_tag :authenticity_token, form_authenticity_token  %>
 </form>
+</div>
